@@ -11,18 +11,36 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>The formal protocol list should be more complete.  A new 
+<code><span>objc.protocolsForProcess()</span></code> enumerates over all mach
+headers and returns all of the protocols defined in the expected
+place.  This fixes the scenario where an application defines a
+protocol (i.e. for plugins) but does not define any classes that
+conform to that protocol.  In that case, the protocol would
+reside in the mach header but would not be reachable by
+iterating over all classes.</li>
+<li>You can now pass the special value <code><span>objc.NULL</span></code> as the value
+for 'in' and 'inout' arguments. This tells the bridge to pass
+a NULL pointer to the Objective-C method, instead of a pointer
+to the value.</li>
 <li>First stab at wrapping some Tiger frameworks:<ul>
 <li><code><span>AppleScriptKit</span></code></li>
-<li><code><span>AppKitScripting</span></code></li>
 <li><code><span>Automator</span></code></li>
 <li><code><span>CoreData</span></code></li>
 <li><code><span>DiscRecording</span></code></li>
 <li><code><span>DiscRecordingUI</span></code></li>
+<li><code><span>Quartz</span></code></li>
+<li><code><span>QTKit</span></code></li>
 <li><code><span>SyncServices</span></code></li>
 <li><code><span>XgridFoundation</span></code></li>
 </ul>
 <p>Documentation and tests not yet written.</p>
 </li>
+<li>Add a CoreData example: a python version of the OutlineEditor example
+from Apple.<p>TODO: compile the .xcdatamodel file.</p>
+</li>
+<li>If the selector name ends with ':error:' and the last argument is a pointer
+to an object, the argument is now assumed to be an output argument.</li>
 <li>More conveniences for <code><span>list</span></code>-like and <code><span>dict</span></code>-like
 objects: <code><span>__reversed__</span></code>, <code><span>reverse</span></code>, <code><span>pop</span></code>,
 <code><span>remove</span></code>, <code><span>fromkeys</span></code>.</li>
@@ -43,8 +61,7 @@ Needs Twisted newer than 2.0 (currently svn r13575 or later).</li>
 <li><code><span>objc.inject</span></code> now injects on main thread by default,
 takes third useMainThread argument to change this behavior.
 Effectively a complete rewrite which should be more correct
-and stable, also synchronized with mach_* 1.1.
-XXX: Still doesn't work with Darwin 8!</li>
+and stable, also synchronized with mach_* 1.1.</li>
 <li>Removed NSAutoreleasePool category hack that has been deprecated for
 quite some time.</li>
 <li>New <code><span>objc.removeAutoreleasePool</span></code> function that will remove
